fix(SCSS): Removed the style that was causing large tables to shift in certain browsers and added new styling instead

--- a/ui/src/main/css/table.scss
+++ b/ui/src/main/css/table.scss
@@ -80,6 +80,7 @@
 
 .table {
   width: 100%;
+  clear: right;
 }
 
 .tableRow {
